# arca-backend

./: .firebaserc  .gitignore  CLAUDE.md  README.md  TEST_PLAN.md  arca-design.md  ask-star.sh  benchmark.py  debug_daily_horoscope.json  debug_prompt.txt  debug_transit_summary.json  deploy-site.sh  firebase.json  firestore.rules  horoscope_response.json  integration_test.py  last_daily_horoscope_response.json  meter_variation_comprehensive.json  meter_variation_stats.json  prod_test.py  prototype.py  pyproject.toml  test.py  test_boost_evidence.py  test_boost_raw_data.py  test_normalization_clamping.py  test_posthog.py  test_v2_variation.py
archive/: detailed_static.j2  meters_v1.py  test_charts_stats.py
backend_output/: README.md  compatibility_coworker.json  compatibility_friendship.json  compatibility_love.json  create_connection.json  create_user_profile.json  daily_transit.json  delete_connection.json  get_astrometers.json  get_compatibility.json  get_daily_horoscope.json  get_memory.json  get_natal_chart_for_connection.json  get_public_profile.json  get_share_link.json  get_sun_sign_from_date.json  get_synastry_chart.json  get_user_profile.json  import_connection.json  list_connection_requests.json  list_connections.json  natal_chart.json  update_connection.json  update_share_mode.json  update_user_profile.json  user_transit.json
docs/: ASTROMETERS_V2.md  ASTROMETER_LABELS.md  CODEBASE_MAP.md  COMPATIBILITY_V2.md  HEADLINE.md  IMPLEMENTATION_PLAN.md  IOS_BREAKING_CHANGES.md  IOS_DAILY_HOROSCOPE_API.md  METER_COMPUTATION_EXPLAINED.md  PUBLIC_API_GENERATED.md  TEST_SCRIPTS.md  TODO.md  ask_the_stars_feature.md  astrometers.md  backend-chart-api-spec.md  backend_charts_api.md  categories.md  chart_feature.md  details.md  (+18 more)
(+318 files in other folders)
