[project]
name = "arca-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firebase-admin>=7.1.0",
    "firebase-functions>=0.4.3",
    "google-genai>=1.45.0",
    "jinja2>=3.1.6",
    "natal>=0.9.6",
    "posthog>=6.7.8",
    "pydantic>=2.12.2",
    "python-dotenv>=1.1.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "firebase-admin>=7.1.0",
    "ipykernel>=7.0.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
